4.5 -> 5.0:
    - jbj: repair a minor rpmInstall and major matchpathcon_init() memleaks.
    - jbj: unbreak --install/--upgrade/--freshen, memleaks checked.
    - jbj: use rpmgi for --install/--upgrade/--freshen. non-functional atm.
    - jbj: add getter/setter for header magic to hide _newmagic construction.
    - jbj: functional sign/verify on --nolead --newmagic packages.
    - jbj: no-operation code paths for --nolead --nosigh packages.
    - jbj: functional sign/verify on --nolead packages.
    - jbj: add rpmkey, a keyctl(1) clone.
    - jbj: disable RPMv3 RSA/DSA signing.
    - jbj: mark RPMv3 code for optional compilation.
    - jbj: snarf /usr and /var values from auto fu to predefine macro values.
    - jbj: disable rpmbuild --sign for now.
    - afb: extract provides from .jnilib's (Fink).
    - afb: always include system.h first (Leopard fix? Fink).
    - afb: include "byte" typedef from beecrypt.
    - afb: preserve passed CFLAGS for zlib.
    - afb: support python 2.3 on Mac OS X.
    - jbj: trash a butt load of passphrase goop.
    - jbj: disable PGP signing to untwist program flow from signature ident.
    - jbj: unbreak signatures.
    - jbj: start using syscall wrappers everywhere.
    - jbj: pass mode_t, not ptr, to matchpathcon.
    - jbj: mark header+payload signature/digest code for destruction.
    - rse: use Autoconf newer $(MKDIR_P) instead of older $(mkinstalldirs) in Makefile.am
    - rse: use __MKDIR_P instead of MKDIR_P for RPM's own specially determined "mkdir -p" to not conflict with Automake MKDIR_P
    - rse: various cleanups and fixes to the test programs
    - jbj: oops, "RPMTAG_FILENAMES" still needed.
    - jbj: extension tags in hdrfmt.c now can be passed NULL. Start the fixing.
    - jbj: rpmtfs-py.c needs _free from rpmio.h, not rpmlib.h
    - jbj: add RPMTAG_{FILE,ORIG}PATHS to not revisit old expectations.
    - jbj: _FINALLY_ get rpmfiBuildFNames() out of rpm libraries. w00t!