@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - jbj: use rpmgi for --addsign/--checksig arg iteration.
     - jbj: repair a minor rpmInstall and major matchpathcon_init() memleaks.
     - jbj: unbreak --install/--upgrade/--freshen, memleaks checked.
     - jbj: use rpmgi for --install/--upgrade/--freshen. non-functional atm.
